<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Othello</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_draw_view">DrawView</string>
    <string name="title_activity_main_activity3">MainActivity3</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="startButtonText">Start Game</string>
    <string name="settingsButtonText">Settings</string>
    <string name="scoreboardButtonText">High Scores</string>
    <string name="title_activity_scoreboard">ScoreboardActivity</string>
    <string name="main_menu_button_text">Main Menu</string>
    <string name="title_activity_player_select">PlayerSelect</string>
    <string name="player1_default_name">Player 1</string>
    <string name="player2_default_name">Player 2</string>
    <string name="select_player">Select Player</string>
    <string name="exit">Exit</string>
    <string name="scores">Scores</string>
    <string name="chip_set">Chip Set</string>
    <string name="chip_set_1">Chip Set 1</string>
    <string name="chip_set_2">Chip Set 2</string>
    <string name="board_type">Board Type</string>
    <string name="board_type_1">Board Type 1</string>
    <string name="board_type_2">Board Type 2</string>
    <string name="Qtimed">Timed?</string>
    <string name="timed">Timed</string>
    <string name="no_of_players">Number Of Players</string>
    <string name="single_player">Single Player</string>
    <string name="two_player">Two Player</string>
    <string name="time_limit">Time Limit</string>
    <string name="choose_player_details">Choose Player Details</string>
    <string name="player_1_details">Player 1 Details</string>
    <string name="player_2_details">Player 2 Details</string>
    
</resources>